# ml_labs

./: .gitignore
lab1/: lab1.ipynb  pyproject.toml
